--- a/lms/templates/librarian/books.html
+++ b/lms/templates/librarian/books.html
@@ -43,17 +43,18 @@
                 </div>
                 <div class="p-4 row">
                     <!-- Form -->
-                    <form action="{{ url_for('librarian.search_books') }}" method="post" class="d-flex align-items-center col-12 col-md-8 col-lg-3">
-                        {{ form.hidden_tag() }}                    
+                    <form action="{{ url_for('librarian.search_books') }}" method="post"
+                        class="d-flex align-items-center col-12 col-md-8 col-lg-3">
+                        {{ form.hidden_tag() }}
                         <span class="position-absolute ps-3 search-icon">
                             <i class="fe fe-search"></i>
                         </span>
                         {{ form.query(class="form-control ps-6", placeholder="Filter Book by isbn number")}}
                         {% if form.query.errors %}
                         <ul class="errors">
-                        {% for error in form.query.errors %}
+                            {% for error in form.query.errors %}
                             <li>{{ error }}</li>
-                        {% endfor %}
+                            {% endfor %}
                         </ul>
                         {% endif %}
 
@@ -75,7 +76,7 @@
                                             <th>Category</th>
                                             <th>Isbn</th>
                                             <th>Version</th>
-                                            <th>Total copies</th>
+                                            <th>Available copies</th>
                                             <th>Created date</th>
                                             <th>Updated date</th>
                                             <th>Action</th>
@@ -88,30 +89,30 @@
                                             <td>No books found for the search query.</td>
                                         </tr>
                                         {% else %}
-                                         {% for books in books.items %}
-                                          <!-- Modal -->
-                                          <div class="modal fade" id="exampleModal" tabindex="-1"
-                                          aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                          <div class="modal-dialog">
-                                              <div class="modal-content">
-                                                  <div class="modal-header">
-                                                      <h1 class="modal-title fs-5" id="exampleModalLabel">Confirm
-                                                          Delete</h1>
-                                                      <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                          aria-label="Close"></button>
-                                                  </div>
-                                                  <div class="modal-body">
-                                                      Are you sure you want to delete this Book ?
-                                                  </div>
-                                                  <div class="modal-footer">
-                                                      <button type="button" class="btn btn-secondary"
-                                                          data-bs-dismiss="modal">Close</button>
-                                                      <a class="btn btn-primary"
-                                                          href="{{ url_for('librarian.remove_book', book_id=books.id) }}">Delete</a>
-                                                  </div>
-                                              </div>
-                                          </div>
-                                      </div>
+                                        {% for books in books.items %}
+                                        <!-- Modal -->
+                                        <div class="modal fade" id="exampleModal" tabindex="-1"
+                                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Confirm
+                                                            Delete</h1>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                            aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        Are you sure you want to delete this Book ?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary"
+                                                            data-bs-dismiss="modal">Close</button>
+                                                        <a class="btn btn-primary"
+                                                            href="{{ url_for('librarian.remove_book', book_id=books.id) }}">Delete</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                         <!-- Table body -->
                                         <tr>
                                             <td>
@@ -124,11 +125,12 @@
                                             <td>
                                                 <a href="#" class="text-inherit">
                                                     <div class="d-flex align-items-center">
-                                                      <div>
-                                                        <img src="{{ url_for('librarian.upload', filename=books.img_upload)}}" alt="" class="img-4by3-md rounded"> 
-                                                      </div>
+                                                        <div>
+                                                            <img src="{{ url_for('librarian.upload', filename=books.img_upload)}}"
+                                                                alt="" class="img-4by3-md rounded">
+                                                        </div>
                                                     </div>
-                                                  </a>
+                                                </a>
                                             </td>
 
                                             <td>
@@ -184,7 +186,7 @@
                                                     <div class="d-flex align-items-center">
                                                         <div class="ms-3">
                                                             <h5 class="mb-0 text-primary-hover txt">
-                                                                {{books.total_copies}}
+                                                                {{books.available_copies}}
                                                             </h5>
                                                         </div>
                                                     </div>
@@ -254,36 +256,41 @@
 
                 <!-- Card Footer -->
                 {% if books is none %}
-                    
+
                 {% else %}
                 <div class="card-footer d-md-flex justify-content-between align-items-center">
                     <div>
                         <span>Showing books {{books.first}} to {{books.last}} of {{books.total}}</span>
                     </div>
-                  
+
                     <nav>
                         <ul class="pagination  mb-0 mt-2">
                             {% if books.has_prev %}
                             <li class="page-item disabled">
-                                <a class="page-link mx-1 rounded" href="{{ url_for('librarian.books', page=books.prev_num) }}"><i class="mdi mdi-chevron-left"></i></a>
+                                <a class="page-link mx-1 rounded"
+                                    href="{{ url_for('librarian.books', page=books.prev_num) }}"><i
+                                        class="mdi mdi-chevron-left"></i></a>
                             </li>
                             {% endif %}
-                           
+
                             {% for number in books.iter_pages() %}
-                                {% if books.page != number %}                                    
-                                    <li class="page-item">
-                                        <a class="page-link mx-1 rounded" href="{{ url_for('librarian.books', page=number) }}">{{ number }}</a>
-                                    </li>
-                                {% else %}
-                                    <li class="page-item active">
-                                        <a class="page-link mx-1 rounded" href="#">{{ number }}</a>
-                                    </li>
-                                {% endif %}
+                            {% if books.page != number %}
+                            <li class="page-item">
+                                <a class="page-link mx-1 rounded"
+                                    href="{{ url_for('librarian.books', page=number) }}">{{ number }}</a>
+                            </li>
+                            {% else %}
+                            <li class="page-item active">
+                                <a class="page-link mx-1 rounded" href="#">{{ number }}</a>
+                            </li>
+                            {% endif %}
                             {% endfor %}
-    
+
                             {% if books.has_next %}
                             <li class="page-item">
-                                <a class="page-link mx-1 rounded" href="{{ url_for('librarian.books', page=books.next_num) }}"><i class="mdi mdi-chevron-right"></i></a>
+                                <a class="page-link mx-1 rounded"
+                                    href="{{ url_for('librarian.books', page=books.next_num) }}"><i
+                                        class="mdi mdi-chevron-right"></i></a>
                             </li>
                             {% endif %}
                         </ul>
