--- a/lms/templates/librarian/books.html
+++ b/lms/templates/librarian/books.html
@@ -59,8 +59,10 @@
                         {% endif %}
 
                     </form>
+
                 </div>
                 <div>
+                    
                     <div class="tab-content" id="tabContent">
                         <!-- Tab -->
                         <div class="tab-pane fade show active" id="all" role="tabpanel" aria-labelledby="all-tab">
@@ -198,7 +200,7 @@
                                                     <div class="d-flex align-items-center">
                                                         <div class="ms-3">
                                                             <h5 class="mb-0 text-primary-hover txt">
-                                                                {{books.created_date}}
+                                                                {{ books.created_date.strftime('%Y-%m-%d ') }}
                                                             </h5>
                                                         </div>
                                                     </div>
@@ -209,9 +211,15 @@
                                                 <a href="#" class="text-inherit">
                                                     <div class="d-flex align-items-center">
                                                         <div class="ms-3">
+                                                            {% if books.updated_date is none %}
                                                             <h5 class="mb-0 text-primary-hover txt">
-                                                                {{books.updated_date}}
+                                                                no updated date
                                                             </h5>
+                                                            {% else %}
+                                                            <h5 class="mb-0 text-primary-hover txt">
+                                                                {{books.updated_date.strftime('%Y-%m-%d ')}}
+                                                            </h5>
+                                                            {% endif %}
                                                         </div>
                                                     </div>
                                                 </a>
@@ -260,7 +268,7 @@
                 {% else %}
                 <div class="card-footer d-md-flex justify-content-between align-items-center">
                     <div>
-                        <span>Showing books {{books.first}} to {{books.last}} of {{books.total}}</span>
+                        <span>Showing books from page {{books.first}} to {{books.last}} of {{books.total}}</span>
                     </div>
 
                     <nav>
