--- a/lms/templates/admin/base.html
+++ b/lms/templates/admin/base.html
@@ -108,7 +108,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link " href="{{ url_for('librarian.category')}}">
-                                        All Books Category
+                                        All Book Category
                                     </a>
                                 </li>
                                 <li class="nav-item">
