ref:updated base.html

--- a/lms/templates/admin/base.html
+++ b/lms/templates/admin/base.html
@@ -80,15 +80,8 @@
                         <div id="navDashboard" class="collapse  show " data-bs-parent="#sideNavbar">
                             <ul class="nav flex-column">
                                 <li class="nav-item ">
-                                    <a class="nav-link  active " href="admin-dashboard.html">
+                                    <a class="nav-link  active " href="{{ url_for('librarian.dashboard')}}">
                                         Overview
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item ">
-                                    <a class="nav-link " href="dashboard-analytics.html">
-                                        Analytics
-
                                     </a>
                                 </li>
                             </ul>
@@ -146,11 +139,6 @@
                                 <li class="nav-item">
                                     <a class="nav-link   active  " href="admin-cms-overview.html">
                                         All Students
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link  " href="admin-cms-post.html">
-                                        Add Students
                                     </a>
                                 </li>
                             </ul>
