--- a/lms/templates/librarian/edit_book.html
+++ b/lms/templates/librarian/edit_book.html
@@ -1,4 +1,4 @@
-{% extends 'admin/base.html' %}
+{% extends 'librarian/base.html' %}
 {% block title %}Edit Book {% endblock%}
 {% block content %}
 <section class="container-fluid p-4">
