--- a/lms/templates/librarian/add_category.html
+++ b/lms/templates/librarian/add_category.html
@@ -1,4 +1,4 @@
-{% extends 'admin/base.html' %}
+{% extends 'librarian/base.html' %}
 {% block title %}Add Book Category{% endblock%}
 {% block content %}
 <section class="container-fluid p-4">
