--- a/lms/templates/librarian/author.html
+++ b/lms/templates/librarian/author.html
@@ -1,5 +1,6 @@
-{% extends 'admin/base.html' %} {% block title %}Authors{% endblock%} {% block
-content %}
+{% extends 'librarian/base.html' %}
+{% block title %}Authors{% endblock%} 
+{% block content %}
 <section class="container-fluid p-4">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-12">
