--- a/lms/templates/librarian/books.html
+++ b/lms/templates/librarian/books.html
@@ -1,4 +1,4 @@
-{% extends 'admin/base.html' %}
+{% extends 'librarian/base.html' %}
 {% block title %}Total Books{% endblock %}
 {% block content %}
 <section class="container-fluid p-4">
