ref: modified auth | forms | librarian.py files

--- a/lms/templates/librarian/base.html
+++ b/lms/templates/librarian/base.html
@@ -137,7 +137,7 @@
                         <div id="navCMS" class="collapse  " data-bs-parent="#sideNavbar">
                             <ul class="nav flex-column">
                                 <li class="nav-item">
-                                    <a class="nav-link   active  " href="admin-cms-overview.html">
+                                    <a class="nav-link   active  " href="{{ url_for('librarian.students')}}">
                                         All Students
                                     </a>
                                 </li>
