--- a/lms/templates/student/dashboard.html
+++ b/lms/templates/student/dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'admin/base.html' %}
+{% extends 'student/base.html' %}
 {% block title %}Student Dashboard{% endblock%}
 
 {% block content %}
