--- a/lms/templates/librarian/add_author.html
+++ b/lms/templates/librarian/add_author.html
@@ -29,30 +29,82 @@
     <div class="row ">
         <div class="offset-xl-3 col-xl-6 col-12">
             <!-- card -->
-            <form action="{{ url_for('librarian.add_author') }}" method="post">
+            <form action="{{ url_for('librarian.add_student) }}" method="post">
                 {{ form.hidden_tag() }}                    
                 <div class="card mb-4">
                     <!-- card body -->
                     <div class="card-body">
-                        <h4 class="mb-4">Author Overview</h4>
+                        <h4 class="mb-4">Book Overview</h4>
 
                         <!-- row -->
                         <div class="row gx-3">
+
                             <!-- input -->
                             <div class="mb-3 ">
-                                {{ form.name.label(for="name", class="form-label")}}
-                                {{ form.name(class="form-control" ,id="name", placeholder="Enter Author full name")}}
-                                {% if form.name.errors %}
-                                <ul class="errors">
-                                {% for error in form.name.errors %}
-                                    <li>{{ error }}</li>
-                                {% endfor %}
-                                </ul>
-                                {% endif %}
+                                <label class="form-label" for="book_category_id">Category</label>
+                                <select class="form-control" id="book_category_id" name="book_category_id" required=""><option value="3">biochemistry</option><option value="6">civil engineering</option><option value="7">education </option><option value="5">electrical/electrionics engineering</option><option value="4">mechanical engineering</option><option value="9">medlab department</option><option value="1">microbiology</option><option value="8">sicrobiology</option><option value="2">statistics</option></select>
+                                
+                            </div>
 
-                            </div>     
+                            <!-- input -->
+                            <div class="mb-3 ">
+                                <label class="form-label" for="author_id">Author</label>
+                                <select class="form-control" id="author_id" name="author_id" required=""><option value="8">abash</option><option value="2">balsly</option><option value="5">hermswoth</option><option value="3">ibadan</option><option value="6">jogan</option><option value="9">justen</option><option value="7">kingsley</option><option value="4">robin</option><option value="1">samuel</option></select>
+                                
+                            </div>
+
+                            <!-- input -->
+                            <div class="mb-3 ">
+                                <label class="form-label" for="title">Title</label>
+                                <input class="form-control" id="title" name="title" placeholder="Enter Book title" required="" type="text" value="">
+                                
+                            </div>
+
+                            <!-- input -->
+                            <div class="mb-3 ">
+                                <label class="form-label" for="description">Description</label>
+                                <textarea class="form-control" id="description" name="description" placeholder="Enter Book description" required=""></textarea>
+                                
+                            </div>
+
+                            <!-- input -->
+                            <div class="mb-3 ">
+                                <label class="form-label" for="version">Version</label>
+                                <input class="form-control" id="version" name="version" placeholder="Enter Book version" required="" type="text" value="">
+                                
+                            </div>
+
+                            <!-- input -->
+                            <div class="mb-3 ">
+                                <label class="form-label" for="publisher">Publisher</label>
+                                <input class="form-control" id="publisher" name="publisher" placeholder="Enter Book publisher" required="" type="text" value="">
+                                
+                            </div>
+
+                            <!-- input -->
+                            <div class="mb-3 ">
+                                <label class="form-label" for="isbn">Isbn</label>
+                                <input class="form-control" id="isbn" name="isbn" placeholder="Enter Book isbn" required="" type="number" value="">
+                                
+                            </div>
+
+                            <!-- input -->
+                            <div class="mb-3 ">
+                                <label class="form-label" for="img_upload">Image Upload</label>
+                                <input class="form-control" id="img_upload" name="img_upload" placeholder="Upload Book Cover
+                                Image" required="" type="file">
+                                
+                            </div>
+
+                            <!-- input -->
+                            <div class="mb-3 ">
+                                <label class="form-label" for="total_copies">Total Copies</label>
+                                <input class="form-control" id="total_copies" name="total_copies" placeholder="Enter Book total_copies" required="" type="number" value="">
+                                
+                            </div>
+
+
                         </div>
-
                     </div>
                 </div>
                 <div class="d-flex justify-content-end">
