ref: implemented token authorization using jwt

--- a/lms/templates/student/base.html
+++ b/lms/templates/student/base.html
@@ -213,7 +213,7 @@
                                     <div class="dropdown-divider"></div>
                                     <ul class="list-unstyled">
                                         <li>
-                                            <a class="dropdown-item" href="{{ url_for('auth.logout_librarian') }}">
+                                            <a class="dropdown-item" href="{{ url_for('auth.logout_student') }}">
                                                 <i class="fe fe-power me-2"></i> Sign Out
                                             </a>
                                         </li>
